@@ -1,0 +1,4 @@
+DIST fontmatrix-0.4.0-Source.tar.gz 617783 RMD160 9b53db0498c28907fc7ea71994bd31bff3c9206e SHA1 9f9dc49260064388a4de73b685b877fa0a4c0ebe SHA256 ee867419afa51b2b73b22c2ec5d839c9980ebbcb1940ecaaf6bad0eef869d20a
+EBUILD fontmatrix-0.4.0.ebuild 463 RMD160 a8a159cded991d916b0e0bbe6d467640ff601c54 SHA1 f9fe387d403a65b36b042faf7f53c4b060877b73 SHA256 96ec58c751cebbcd85da8d5b4d25b65a8af7950f9c9c4aeb636bd9d863425730
+MISC ChangeLog 634 RMD160 decd9d632635be33d352b7e9de2c3beaf4ab2e57 SHA1 5eb7b3122fb88704b3e35b28fd5897d775a2fb17 SHA256 3e4ae3cc502e437ee7f6d95018276b1017325cb3b1508eddcda24e5b681d8638
+MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
