@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> +metadata.xml:
+  Add removed metadata.xml and missing Manifest
+
   04 Apr 2008; Markus Rennings (mren) <mren@mrmx.de>
   -fontmatrix-0.3.1.ebuild, +fontmatrix-0.4.0.ebuild, -metadata.xml:
   Version bump
